# scarlet2

./: .copier-answers.yml  .gitattributes  .gitconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  data_test.pkl  hessian_toy_model.ipynb  index.json  info.json  pyproject.toml  regressions.json  regressions.xml  requirements.txt  run_hessian_demo.ipynb  run_test.ipynb  run_test.py  run_test_with_nn.ipynb  setup.py  test_renderer_moments.ipynb
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: asv-main.yml  asv-nightly.yml  asv-pr.yml  pre-commit-ci.yml  publish-benchmarks-pr.yml  publish-to-pypi.yml  python-app.yml  smoke-test.yml  testing-and-coverage.yml
_results/: benchmarks.json
_results/gh-runner/: 002871ec-virtualenv-py3.12-Cython-build-packaging.json  0365e5d6-virtualenv-py3.11-Cython-build-packaging.json  0365e5d6-virtualenv-py3.12-Cython-build-packaging.json  055aaff3-virtualenv-py3.11-Cython-build-packaging.json  055aaff3-virtualenv-py3.12-Cython-build-packaging.json  0b28422d-virtualenv-py3.11-Cython-build-packaging.json  0b28422d-virtualenv-py3.12-Cython-build-packaging.json  0fb850a5-virtualenv-py3.11-Cython-build-packaging.json  0fb850a5-virtualenv-py3.12-Cython-build-packaging.json  10115061-virtualenv-py3.11-Cython-build-packaging.json  10115061-virtualenv-py3.12-Cython-build-packaging.json  1104edad-virtualenv-py3.11-Cython-build-packaging.json  1104edad-virtualenv-py3.12-Cython-build-packaging.json  11af699c-virtualenv-py3.12-Cython-build-packaging.json  1221197f-virtualenv-py3.11-Cython-build-packaging.json  1221197f-virtualenv-py3.12-Cython-build-packaging.json  12a392c6-virtualenv-py3.12-Cython-build-packaging.json  1402d7b3-virtualenv-py3.11-Cython-build-packaging.json  1402d7b3-virtualenv-py3.12-Cython-build-packaging.json  15e6741f-virtualenv-py3.11-Cython-build-packaging.json  15e6741f-virtualenv-py3.12-Cython-build-packaging.json  1972e2dc-virtualenv-py3.11-Cython-build-packaging.json  1972e2dc-virtualenv-py3.12-Cython-build-packaging.json  19d67dc4-virtualenv-py3.11-Cython-build-packaging.json  19d67dc4-virtualenv-py3.12-Cython-build-packaging.json  1a391da0-virtualenv-py3.12-Cython-build-packaging.json  1a9fb4b9-virtualenv-py3.11-Cython-build-packaging.json  1a9fb4b9-virtualenv-py3.12-Cython-build-packaging.json  1b9e3928-virtualenv-py3.11-Cython-build-packaging.json  1b9e3928-virtualenv-py3.12-Cython-build-packaging.json  1bcc34b1-virtualenv-py3.11-Cython-build-packaging.json  1bcc34b1-virtualenv-py3.12-Cython-build-packaging.json  1bd0add1-virtualenv-py3.11-Cython-build-packaging.json  1bd0add1-virtualenv-py3.12-Cython-build-packaging.json  1c41a6b5-virtualenv-py3.11-Cython-build-packaging.json  1c41a6b5-virtualenv-py3.12-Cython-build-packaging.json  1d300bbb-virtualenv-py3.11-Cython-build-packaging.json  1d300bbb-virtualenv-py3.12-Cython-build-packaging.json  1e8cc045-virtualenv-py3.11-Cython-build-packaging.json  1e8cc045-virtualenv-py3.12-Cython-build-packaging.json  (+320 more)
benchmarks/: asv.conf.json  bbox_benchmarks.py  benchmarks.py
docs/: 0-example.ipynb  0-quickstart.ipynb  1-howto.md  2-questionnaire.md  2-validation.md  3-questionnaire.md  3-validation.md  api.rst  conf.py  index.md  index.rst  quickstart.ipynb  requirements.txt  tutorials.md
docs/_templates/: custom-class-template.rst  custom-module-template.rst
docs/howto/: correlated.ipynb  detect.ipynb  fourier_noise.ipynb  lsb.ipynb  multiresolution.ipynb  priors.ipynb  priors.md  questionnaire.ipynb  questionnaire.py.ipynb  questionnaire.rst  sampling.ipynb  sampling.md  timedomain.ipynb
docs/tutorials/: priors.md  sampling.md
graphs/summary/: bbox_benchmarks.BoxSuite.mem_bbox_contains.json  (+3 more)
paper/: paper.bib  paper.md
scarlet2/: __init__.py  bbox.py  constraint.py  customPrior.py  display.py  distribution.py  dusty_nn.py  fft.py  frame.py  init.py  initialization.py  interpolation.py  io.py  measure.py  models_eqx.py  module.py  morphology.py  nn.py  observation.py  plot.py  prior.py  psf.py  renderer.py  scene.py  scorenet.py  source.py  spectrum.py  utils.py  wavelet.py  wavelets.py
tests/: demo_io.h5  test_fisher_metrics.py  test_moments.py  test_multiresolution.py  test_quickstart.py  test_renderer.py  test_save_output.py  utils.py
(+58 files in other folders)
